# R-D-telegram-game

./: .env.example  .pre-commit-config.yaml  ARCHITECTURE.md  CHARACTER_SYSTEM.md  COMBAT_SYSTEM.md  DATABASE_SETUP.md  FSM_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  LOGGING.md  Makefile  README.md  README_MULTILINGUAL.md  SCENE_GRAPH_README.md  alembic.ini  demo.py  docker-compose.yml  env_template.txt  init.sql  pyproject.toml  requirements-dev.txt  requirements.txt  run_bot.py  test_basic.py  test_combat.py  test_fsm_integration.py  test_scene_graph.py  user_languages.json
alembic/: env.py
alembic/versions/: 1b97bcc51f24_add_current_state_to_game_sessions.py  4eae3ce201c3_add_user_model.py  c030eb610a8e_add_character_attributes_and_progression.py  cd3f491d571f_add_world_and_progress_system.py
app/: __init__.py  config.py  main.py  prompts.py
app/core/: __init__.py  config.py  db.py  redis.py  utils.py
app/game/: __init__.py  actions.py  scenes.py  scenes.yaml  states.py
app/handlers/: __init__.py  callbacks.py  combat.py  errors.py  game.py  keyboards.py  language.py  start.py  utils.py
app/handlers/commands/: __init__.py  character.py  combat.py  game.py  hero.py  regions.py  start.py
app/locales/: __init__.py  en.json  uk.json
app/middlewares/: correlation.py  database.py  i18n.py
app/models/: __init__.py  character.py  combat.py  i18n.py  items.py  lore.py  player.py  player_progress.py  telemetry.py  user.py  world.py
app/services/: fsm_service.py  i18n_service.py  logging_service.py  openai_service.py
app/services/ai/: __init__.py  action_service.py  generation_service.py  label_generator.py
(+6 files in other folders)
